# webTablut

./: .gitignore  CMakeLists.txt  README.md  index.html
css/: styles.css
js/: osarracino.js  osarracino.wasm  pixi.min.js
lib/: CMakeLists.txt
lib/model/: Board.cpp  Board.h
lib/movegenerator/: MoveGenerator.h
lib/search/: SearchEngine.h
lib/web/: WebInterface.cpp
